--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,19 @@ button {
    
     margin: 5px;
     cursor: pointer;
+    background-color: #2F4F4F;
+    border-radius: 10px;
+    padding: 10px;
+    color: #fff;
+    box-shadow: 5px 5px 10px 0px rgba(255, 255, 255, 0.75);
+    transition: .1s;
+    &:hover{
+        background-color: #778899;
+    }
+    &:active{
+        background-color: #DCDCDC;
+        transform: translate(1.10);
+    }
 
 }
 .divButton{
@@ -49,3 +62,4 @@ button {
         height: auto;
     }
     
+}
